PS-2019.2.3 <sina@sina-ThinkPad-E470 Update find.xml, PHP Interfaces.xml

--- a/templates/PHP Interfaces.xml
+++ b/templates/PHP Interfaces.xml
@@ -1,5 +1,5 @@
 <templateSet group="PHP Interfaces">
-  <template name="test" value="/** @test **/&#10;public funtion $NAME$() &#10;{&#10;    $CODE$&#10;}" description="test template" toReformat="false" toShortenFQNames="true">
+  <template name="test" value="/** @test **/&#10;public function $NAME$() &#10;{&#10;    $CODE$&#10;}" description="test template" toReformat="false" toShortenFQNames="true">
     <variable name="NAME" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="CODE" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
