--- a/templates/PHP.xml
+++ b/templates/PHP.xml
@@ -5,4 +5,11 @@
       <option name="PHP" value="true" />
     </context>
   </template>
+  <template name="tryc" value="try { &#10;    $START$&#10;} catch ($SECOND$){ &#10;    $END$&#10;}" description="try and catch error" toReformat="false" toShortenFQNames="true">
+    <variable name="START" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="SECOND" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="PHP" value="true" />
+    </context>
+  </template>
 </templateSet>
