WS-2020.3.2 <sinas@DESKTOP-VPANO2N Update HTTP Request.xml, React.xml, xsl.xml, Angular.xml, JavaScript Testing.xml, AngularJS.xml, Zen HTML.xml, editor.xml, HTML_XML.xml, Zen CSS.xml, Vue.xml

--- a/templates/Zen HTML.xml
+++ b/templates/Zen HTML.xml
@@ -9,8 +9,6 @@
     <variable name="MIN_SCALE" expression="" defaultValue="&quot;1.0&quot;" alwaysStopAt="true" />
     <variable name="IE" expression="" defaultValue="&quot;edge&quot;" alwaysStopAt="true" />
     <variable name="TITLE" expression="" defaultValue="&quot;Document&quot;" alwaysStopAt="true" />
-    <context>
-      <option name="JSX_HTML" value="true" />
-    </context>
+    <context />
   </template>
 </templateSet>
