IU-2021.1.2 <sinashariati@sinas-MacBook-Pro.local Update filetypes.xml, Java.xml

--- a/templates/Java.xml
+++ b/templates/Java.xml
@@ -12,4 +12,12 @@
       <option name="JAVA_CODE" value="true" />
     </context>
   </template>
+  <template name="pubbo" value="public boolean $NAME$($PARAMS$) {&#10;    $BODY$&#10;}" description="inserts 'public boolean' method" toReformat="false" toShortenFQNames="true">
+    <variable name="NAME" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="PARAMS" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="BODY" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_CODE" value="true" />
+    </context>
+  </template>
 </templateSet>
