--- a/templates/PHP.xml
+++ b/templates/PHP.xml
@@ -12,4 +12,9 @@
       <option name="PHP Class Member" value="true" />
     </context>
   </template>
+  <template name="$" value="$this-&gt;" description="ready up '$this' to chain" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="PHP" value="true" />
+    </context>
+  </template>
 </templateSet>
