--- a/templates/Python.xml
+++ b/templates/Python.xml
@@ -1,17 +1,15 @@
 <templateSet group="Python">
-  <template name="def" value="def $NAME$($ARGS$)-&gt;$OUTPUT$:&#10;    $BODY$" description="it adds 'def' block" toReformat="false" toShortenFQNames="true">
+  <template name="def" value="def $NAME$($ARGS$):&#10;    $BODY$" description="it adds 'def' block" toReformat="false" toShortenFQNames="true">
     <variable name="NAME" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="ARGS" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="OUTPUT" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="BODY" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="Python" value="true" />
     </context>
   </template>
-  <template name="meth" value="def $NAME$(self, $ARGS$)-&gt;$RETURN_TYPE$:&#10;    $BODY$" description="it creates a method in the given context" toReformat="true" toShortenFQNames="true">
+  <template name="meth" value="def $NAME$(self, $ARGS$):&#10;    $BODY$" description="it creates a method in the given context" toReformat="true" toShortenFQNames="true">
     <variable name="NAME" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="ARGS" expression="" defaultValue="" alwaysStopAt="true" />
-    <variable name="RETURN_TYPE" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="BODY" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="Python_Class" value="true" />
