DB-2022.1 <sinashariati@sinas-MacBook-Pro.local Update laf.xml, Shell Script.xml, HTTP Request.xml, JavaScript Testing.xml, colors.scheme.xml, JavaScript.xml, keymap.xml, Zen HTML.xml, Zen CSS.xml	Create editor-font.xml, macOS copy.xml

--- a/templates/Zen HTML.xml
+++ b/templates/Zen HTML.xml
@@ -1,5 +1,7 @@
 <templateSet group="Zen HTML">
   <template name="b" value="&lt;b&gt;$END$&lt;/b&gt;" description="&lt;b&gt;...&lt;/b&gt;" toReformat="false" toShortenFQNames="true">
-    <context />
+    <context>
+      <option name="JSX_HTML" value="true" />
+    </context>
   </template>
 </templateSet>
