GO-2021.3.3 <sinashariati@sinas-MacBook-Pro.local Update Shell Script.xml, HTTP Request.xml, JavaScript Testing.xml, JavaScript.xml, Zen HTML.xml, Zen CSS.xml

--- a/templates/Shell Script.xml
+++ b/templates/Shell Script.xml
@@ -1,5 +1,6 @@
 <templateSet group="Shell Script">
   <template name="cmd" value="`$COMMAND$`" description="Command substitution" toReformat="false" toShortenFQNames="false">
     <variable name="COMMAND" expression="" defaultValue="&quot;command&quot;" alwaysStopAt="true" />
+    <context />
   </template>
 </templateSet>
