--- a/templates/Zen HTML.xml
+++ b/templates/Zen HTML.xml
@@ -1,7 +1,5 @@
 <templateSet group="Zen HTML">
   <template name="b" value="&lt;b&gt;$END$&lt;/b&gt;" description="&lt;b&gt;...&lt;/b&gt;" toReformat="false" toShortenFQNames="true">
-    <context>
-      <option name="JSX_HTML" value="true" />
-    </context>
+    <context />
   </template>
 </templateSet>
