WS-2022.2.1 <sinashariati@sinas-MacBook-Pro-2.local Update Handlebars.xml, nodejs.xml, JavaScript.xml, postfixTemplates.xml, templates.xml

--- a/templates/JavaScript.xml
+++ b/templates/JavaScript.xml
@@ -11,4 +11,11 @@
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
+  <template name="arrow" value="($VAR$) =&gt; {&#10;    $BODY$&#10;}" description="Creates an arrow function" toReformat="false" toShortenFQNames="true">
+    <variable name="VAR" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="BODY" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+    </context>
+  </template>
 </templateSet>
